Fixed word-wrap behaviour

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -233,5 +233,5 @@ tr {
 
 /* To ensure that long content in a table cells wraps */
 .wrap-content {
-    word-break: break-all;
+    word-break: break-word;
 }
